--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     
     <!-- import the webpage's javascript file -->
     <script src="https://cdn.jsdelivr.net/p5.js/latest/p5.js"></script>
-    <script src="/script.js" defer></script>
+    <!-- <script src="https://gist.github.com/VQube/dfc4926e3d69802fd086.js"></script>--> <!-- used to get the createImg.position() function -->
+    <script src="/script.js"></script>
+    <script src="/p5.dom.js"></script>
   </head>  
   <body>
     
