--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="/script.js"></script>
     <script src="/p5.dom.min.js"></script>
   </head>  
-  <body onclick="reportClick();">
+  <!--<body onclick="reportClick();">-->
     
   </body>
 </html>
