💘🍋 Checkpoint ./index.html:5959929/133:19534746/124 ./p5.js-sound.js:19534746/420193 ./script.js:5959929/77

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <!-- <script src="https://gist.github.com/VQube/dfc4926e3d69802fd086.js"></script>--> <!-- used to get the createImg.position() function -->
     <script src="/script.js"></script>
     <script src="/p5.dom.min.js"></script>
+    <script src ="/p5.js-sound.js"></script>
     
   </head>  
-  <!--<body onclick="reportClick();">-->
-    
+  <body>
+  <!--<body onclick="reportClick();">-->    
   </body>
 </html>
