👳🧀 Checkpoint ./index.html:19534746/4 ./script.js:5959929/167:19534746/908

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/p5.js/latest/p5.js"></script>
     <!-- <script src="https://gist.github.com/VQube/dfc4926e3d69802fd086.js"></script>--> <!-- used to get the createImg.position() function -->
     <script src="/script.js"></script>
-    <script src="/p5.dom.min.js"></script>
+    <script src="/p5.dom.js"></script>
     <script src ="/p5.js-sound.js"></script>
     
   </head>  
