🎌🎠 Checkpoint ./character.js:5959929/2 ./index.html:5959929/288

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <!-- <script src="https://gist.github.com/VQube/dfc4926e3d69802fd086.js"></script>--> <!-- used to get the createImg.position() function -->
     <script src="/script.js"></script>
     <script src="/p5.dom.js"></script>
-    <script src ="/p5.js-sound.js"></script>
+    <script src="/p5.js-sound.js"></script>
+    <script src="/character.js"></script>
+    <script src="/obstacle.js"></script>
+    <script src="/platform.js"></script>
+    <script src="/globals.js"></script>
+    <script src="/tile.js"></script>
     
   </head>  
   <body>
