--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="/platform.js"></script>
     <script src="/globals.js"></script>
     <script src="/tile.js"></script>
+    <script src="/line.js"></script>
+    <script src="/point.js"></script>
     
   </head>  
   <body>
