🌽🔮 Checkpoint ./script.js:19534746/338 ./line.js:19534746/2 ./index.html:5959929/2 ./tile.js:19534746/2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="/platform.js"></script>
     <script src="/globals.js"></script>
     <script src="/tile.js"></script>
-    <script src="/line.js"></script>
+    <script src="/line2d.js"></script>
     <script src="/point.js"></script>
     
   </head>  
