--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="/tile.js"></script>
     <script src="/line2d.js"></script>
     <script src="/point.js"></script>
+    <script src="/main-game.js"></script>
+    <script src="/hbox-drawing.js"></script>
     
   </head>  
   <body>
